--- a/nba-streams-9.html
+++ b/nba-streams-9.html
@@ -99,7 +99,7 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://600.xn--1000-ugoxe8a5a7g4h.com/nba9.m3u8')">Stream 1</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://600.xn--1000-ugoa0hsb9a0hb.com/nba9.m3u8')">Stream 1</button>
             </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
@@ -134,7 +134,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://600.xn--1000-ugoxe8a5a7g4h.com/nba9.m3u8');
+            showPlayer('clappr', 'https://600.xn--1000-ugoa0hsb9a0hb.com/nba9.m3u8');
         };
     </script>
     <script>
