--- a/nhl-streams-8.html
+++ b/nhl-streams-8.html
@@ -99,7 +99,7 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://600.alfirdaus.eu.org/nhl8.m3u8')">Stream 1</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://600.roxiestreams.live/nhl8.m3u8')">Stream 1</button>
             </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
@@ -134,7 +134,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://600.alfirdaus.eu.org/nhl8.m3u8');
+            showPlayer('clappr', 'https://600.roxiestreams.live/nhl8.m3u8');
         };
     </script>
     <script>
