--- a/soccer.html
+++ b/soccer.html
@@ -96,99 +96,23 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Sevilla vs Real Oviedo</a>
-<td>December 14, 2025 05:00 AM</td>
-<td><span class="countdown-timer" data-end="December 15, 2025 04:00:00" data-start="December 14, 2025 05:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Roma vs Como</a>
+<td>December 15, 2025 11:45 AM</td>
+<td><span class="countdown-timer" data-end="December 16, 2025 10:45:00" data-start="December 15, 2025 11:45:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Lyon vs Le Havre</a>
-<td>December 14, 2025 06:00 AM</td>
-<td><span class="countdown-timer" data-end="December 15, 2025 05:00:00" data-start="December 14, 2025 06:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Rayo Vallecano vs Real Betis</a>
+<td>December 15, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 16, 2025 11:00:00" data-start="December 15, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Udinese vs Napoli</a>
-<td>December 14, 2025 06:00 AM</td>
-<td><span class="countdown-timer" data-end="December 15, 2025 05:00:00" data-start="December 14, 2025 06:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Manchester United vs Bournemouth</a>
+<td>December 15, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 16, 2025 11:00:00" data-start="December 15, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Crystal Palace vs Man City</a>
-<td>December 14, 2025 06:00 AM</td>
-<td><span class="countdown-timer" data-end="December 15, 2025 05:00:00" data-start="December 14, 2025 06:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Sheffield Wednesday vs Derby County</a>
+<td>December 15, 2025 06:00 AM</td>
+<td><span class="countdown-timer" data-end="December 16, 2025 05:00:00" data-start="December 15, 2025 06:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">West Ham vs Aston Villa</a>
-<td>December 14, 2025 06:00 AM</td>
-<td><span class="countdown-timer" data-end="December 15, 2025 05:00:00" data-start="December 14, 2025 06:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-7">Nottingham Forest vs Tottenham</a>
-<td>December 14, 2025 06:00 AM</td>
-<td><span class="countdown-timer" data-end="December 15, 2025 05:00:00" data-start="December 14, 2025 06:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-8">Sunderland vs Newcastle</a>
-<td>December 14, 2025 06:00 AM</td>
-<td><span class="countdown-timer" data-end="December 15, 2025 05:00:00" data-start="December 14, 2025 06:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-9">Freiburg vs Dortmund</a>
-<td>December 14, 2025 06:30 AM</td>
-<td><span class="countdown-timer" data-end="December 15, 2025 05:30:00" data-start="December 14, 2025 06:30:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Celta De Vigo vs Athletic Club</a>
-<td>December 14, 2025 07:15 AM</td>
-<td><span class="countdown-timer" data-end="December 15, 2025 06:15:00" data-start="December 14, 2025 07:15:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-10">St. Mirren vs Celtic</a>
-<td>December 14, 2025 07:30 AM</td>
-<td><span class="countdown-timer" data-end="December 15, 2025 06:30:00" data-start="December 14, 2025 07:30:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-11">Auxerre vs Lille</a>
-<td>December 14, 2025 08:15 AM</td>
-<td><span class="countdown-timer" data-end="December 15, 2025 08:30:00" data-start="December 14, 2025 09:30:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Lens vs Nice</a>
-<td>December 14, 2025 08:15 AM</td>
-<td><span class="countdown-timer" data-end="December 15, 2025 07:15:00" data-start="December 14, 2025 08:15:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-12">Brentford vs Leeds United</a>
-<td>December 14, 2025 08:30 AM</td>
-<td><span class="countdown-timer" data-end="December 15, 2025 07:30:00" data-start="December 14, 2025 08:30:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-9">Bayern München vs Mainz 05</a>
-<td>December 14, 2025 08:30 AM</td>
-<td><span class="countdown-timer" data-end="December 15, 2025 07:30:00" data-start="December 14, 2025 08:30:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-13">Genoa vs Inter Milan</a>
-<td>December 14, 2025 09:00 AM</td>
-<td><span class="countdown-timer" data-end="December 15, 2025 08:00:00" data-start="December 14, 2025 09:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Levante vs Villarreal</a>
-<td>December 14, 2025 09:30 AM</td>
-<td><span class="countdown-timer" data-end="December 15, 2025 08:30:00" data-start="December 14, 2025 09:30:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-9">Werder Bremen vs Stuttgart</a>
-<td>December 14, 2025 10:30 AM</td>
-<td><span class="countdown-timer" data-end="December 15, 2025 09:30:00" data-start="December 14, 2025 10:30:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Marseille vs Monaco</a>
-<td>December 14, 2025 11:45 AM</td>
-<td><span class="countdown-timer" data-end="December 15, 2025 10:45:00" data-start="December 14, 2025 11:45:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-14">Bologna vs Juventus</a>
-<td>December 14, 2025 11:45 AM</td>
-<td><span class="countdown-timer" data-end="December 15, 2025 10:45:00" data-start="December 14, 2025 11:45:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Deportivo Alavés vs Real Madrid</a>
-<td>December 14, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 15, 2025 11:00:00" data-start="December 14, 2025 12:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-15">Corinthians vs Cruzeiro</a>
-<td>December 14, 2025 13:00 PM</td>
-<td><span class="countdown-timer" data-end="December 15, 2025 12:00:00" data-start="December 14, 2025 13:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-16">Fluminense vs Vasco Da Gama</a>
-<td>December 14, 2025 16:30 PM</td>
-<td><span class="countdown-timer" data-end="December 15, 2025 15:30:00" data-start="December 14, 2025 16:30:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-17">Toluca vs Tigres</a>
-<td>December 14, 2025 17:00 PM</td>
-<td><span class="countdown-timer" data-end="December 15, 2025 16:00:00" data-start="December 14, 2025 17:00:00"></span></td>
-<tr>
-</tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table></div>
+</tr></td></tr></td></tr></td></tr></td></tr></tbody></table></div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
 <li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
