--- a/nba.html
+++ b/nba.html
@@ -143,112 +143,70 @@
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-1">
-         Washington Wizards vs Indiana Pacers
+         Detroit Pistons vs Boston Celtics
         </a>
        </td>
        <td>
-        December 14, 2025 12:00 PM
+        December 15, 2025 4:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="December 15, 2025 12:00 PM:00" data-start="December 14, 2025 12:00 PM:00">
+        <span class="countdown-timer" data-end="December 16, 2025 4:00 PM:00" data-start="December 15, 2025 4:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-2">
-         Charlotte Hornets vs Cleveland Cavaliers
+         Toronto Raptors vs Miami Heat
         </a>
        </td>
        <td>
-        December 14, 2025 12:30 PM
+        December 15, 2025 4:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="December 15, 2025 12:30 PM:00" data-start="December 14, 2025 12:30 PM:00">
+        <span class="countdown-timer" data-end="December 16, 2025 4:30 PM:00" data-start="December 15, 2025 4:30 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-3">
-         Philadelphia 76ers vs Atlanta Hawks
+         Dallas Mavericks vs Utah Jazz
         </a>
        </td>
        <td>
-        December 14, 2025 3:00 PM
+        December 15, 2025 6:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="December 15, 2025 3:00 PM:00" data-start="December 14, 2025 3:00 PM:00">
+        <span class="countdown-timer" data-end="December 16, 2025 6:00 PM:00" data-start="December 15, 2025 6:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-4">
-         Milwaukee Bucks vs Brooklyn Nets
+         Houston Rockets vs Denver Nuggets
         </a>
        </td>
        <td>
-        December 14, 2025 3:00 PM
+        December 15, 2025 6:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="December 15, 2025 3:00 PM:00" data-start="December 14, 2025 3:00 PM:00">
+        <span class="countdown-timer" data-end="December 16, 2025 6:30 PM:00" data-start="December 15, 2025 6:30 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-5">
-         Sacramento Kings vs Minnesota Timberwolves
+         Memphis Grizzlies vs Los Angeles Clippers
         </a>
        </td>
        <td>
-        December 14, 2025 4:00 PM
+        December 15, 2025 7:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="December 15, 2025 4:00 PM:00" data-start="December 14, 2025 4:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-6">
-         New Orleans Pelicans vs Chicago Bulls
-        </a>
-       </td>
-       <td>
-        December 14, 2025 4:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 15, 2025 4:00 PM:00" data-start="December 14, 2025 4:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-7">
-         Los Angeles Lakers vs Phoenix Suns
-        </a>
-       </td>
-       <td>
-        December 14, 2025 5:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 15, 2025 5:00 PM:00" data-start="December 14, 2025 5:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-8">
-         Golden State Warriors vs Portland Trail Blazers
-        </a>
-       </td>
-       <td>
-        December 14, 2025 6:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 15, 2025 6:00 PM:00" data-start="December 14, 2025 6:00 PM:00">
+        <span class="countdown-timer" data-end="December 16, 2025 7:30 PM:00" data-start="December 15, 2025 7:30 PM:00">
         </span>
        </td>
       </tr>
