--- a/nfl.html
+++ b/nfl.html
@@ -142,211 +142,15 @@
      <tbody>
       <tr>
        <td>
-        <a href="https://roxiestreams.live/redzone">
-         NFL RedZone
-        </a>
-       </td>
-       <td>
-        December 14, 2025 10:00 AM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 15, 2025 10:00 AM:00" data-start="December 14, 2025 10:00 AM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
         <a href="https://roxiestreams.live/nfl-streams-1">
-         Cleveland Browns vs Chicago Bears
+         Miami Dolphins vs Pittsburgh Steelers
         </a>
        </td>
        <td>
-        December 14, 2025 10:00 AM
+        December 15, 2025 5:15 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="December 15, 2025 10:00 AM:00" data-start="December 14, 2025 10:00 AM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nfl-streams-2">
-         Baltimore Ravens vs Cincinnati Bengals
-        </a>
-       </td>
-       <td>
-        December 14, 2025 10:00 AM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 15, 2025 10:00 AM:00" data-start="December 14, 2025 10:00 AM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nfl-streams-3">
-         Los Angeles Chargers vs Kansas City Chiefs
-        </a>
-       </td>
-       <td>
-        December 14, 2025 10:00 AM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 15, 2025 10:00 AM:00" data-start="December 14, 2025 10:00 AM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nfl-streams-4">
-         Buffalo Bills vs New England Patriots
-        </a>
-       </td>
-       <td>
-        December 14, 2025 10:00 AM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 15, 2025 10:00 AM:00" data-start="December 14, 2025 10:00 AM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nfl-streams-5">
-         Washington Commanders vs New York Giants
-        </a>
-       </td>
-       <td>
-        December 14, 2025 10:00 AM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 15, 2025 10:00 AM:00" data-start="December 14, 2025 10:00 AM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nfl-streams-6">
-         Las Vegas Raiders vs Philadelphia Eagles
-        </a>
-       </td>
-       <td>
-        December 14, 2025 10:00 AM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 15, 2025 10:00 AM:00" data-start="December 14, 2025 10:00 AM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nfl-streams-7">
-         New York Jets vs Jacksonville Jaguars
-        </a>
-       </td>
-       <td>
-        December 14, 2025 10:00 AM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 15, 2025 10:00 AM:00" data-start="December 14, 2025 10:00 AM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nfl-streams-8">
-         Arizona Cardinals vs Houston Texans
-        </a>
-       </td>
-       <td>
-        December 14, 2025 10:00 AM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 15, 2025 10:00 AM:00" data-start="December 14, 2025 10:00 AM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nfl-streams-9">
-         Green Bay Packers vs Denver Broncos
-        </a>
-       </td>
-       <td>
-        December 14, 2025 1:25 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 15, 2025 1:25 PM:00" data-start="December 14, 2025 1:25 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nfl-streams-10">
-         Detroit Lions vs Los Angeles Rams
-        </a>
-       </td>
-       <td>
-        December 14, 2025 1:25 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 15, 2025 1:25 PM:00" data-start="December 14, 2025 1:25 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nfl-streams-11">
-         Carolina Panthers vs New Orleans Saints
-        </a>
-       </td>
-       <td>
-        December 14, 2025 1:25 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 15, 2025 1:25 PM:00" data-start="December 14, 2025 1:25 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nfl-streams-12">
-         Tennessee Titans vs San Francisco 49ers
-        </a>
-       </td>
-       <td>
-        December 14, 2025 1:25 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 15, 2025 1:25 PM:00" data-start="December 14, 2025 1:25 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nfl-streams-13">
-         Indianapolis Colts vs Seattle Seahawks
-        </a>
-       </td>
-       <td>
-        December 14, 2025 1:25 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 15, 2025 1:25 PM:00" data-start="December 14, 2025 1:25 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nfl-streams-14">
-         Minnesota Vikings vs Dallas Cowboys
-        </a>
-       </td>
-       <td>
-        December 14, 2025 5:20 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="December 15, 2025 5:20 PM:00" data-start="December 14, 2025 5:20 PM:00">
+        <span class="countdown-timer" data-end="December 16, 2025 5:15 PM:00" data-start="December 15, 2025 5:15 PM:00">
         </span>
        </td>
       </tr>
