--- a/soccer.html
+++ b/soccer.html
@@ -109,8 +109,8 @@
 <td><span class="countdown-timer" data-end="December 16, 2025 11:00:00" data-start="December 15, 2025 12:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-4">Sheffield Wednesday vs Derby County</a>
-<td>December 15, 2025 06:00 AM</td>
-<td><span class="countdown-timer" data-end="December 16, 2025 05:00:00" data-start="December 15, 2025 06:00:00"></span></td>
+<td>December 15, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 16, 2025 05:00:00" data-start="December 15, 2025 12:00:00"></span></td>
 <tr>
 </tr></td></tr></td></tr></td></tr></td></tr></tbody></table></div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
