--- a/nfl-streams-1.html
+++ b/nfl-streams-1.html
@@ -99,7 +99,9 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://600.tanjung.eu.org/nfl.m3u8')">Stream 1</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://600.alfirdaus.eu.org/nfl.m3u8')">Stream 1</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil.shadow-ran.online/main.m3u8')">Stream 2</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://600.alfirdaus.eu.org/nflalty.m3u8')">Stream 3</button>
           </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
@@ -134,7 +136,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://600.tanjung.eu.org/nfl.m3u8');
+            showPlayer('clappr', 'https://600.alfirdaus.eu.org/nfl.m3u8');
         };
     </script>
     <script>
