--- a/nfl-streams-1.html
+++ b/nfl-streams-1.html
@@ -99,11 +99,9 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://600.xn--1000-ugoa0hsb9a0hb.com
-/nfl.m3u8')">Stream 1</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://600.xn--1000-ugoa0hsb9a0hb.com/nfl.m3u8')">Stream 1</button>
                 <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil.shadow-ran.online/main.m3u8')">Stream 2</button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://600.xn--1000-ugoa0hsb9a0hb.com
-/nflalty.m3u8')">Stream 3</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://600.xn--1000-ugoa0hsb9a0hb.com/nflalty.m3u8')">Stream 3</button>
           </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
