--- a/nba.html
+++ b/nba.html
@@ -212,6 +212,40 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for December 16, 2025
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         TBD vs TBD
+        </a>
+       </td>
+       <td>
+        December 16, 2025 5:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 17, 2025 5:30 PM:00" data-start="December 16, 2025 5:30 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
