--- a/nhl.html
+++ b/nhl.html
@@ -119,6 +119,59 @@
             <td><a href="https://roxiestreams.live/nhl-streams-5">Los Angeles Kings vs Dallas Stars</a></td>
             <td>December 15, 2025 05:00 PM</td>
             <td><span class="countdown-timer" data-end="2025-12-16 17:00:00" data-start="2025-12-15 17:00:00"></span></td>
+        </tr>
+        <tr style="background-color: #333; color: white;">
+            <td colspan="3"><strong>Tuesday, December 16, 2025</strong></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-1">Utah Mammoth vs Boston Bruins</a></td>
+            <td>December 16, 2025 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-17 16:00:00" data-start="2025-12-16 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-2">Chicago Blackhawks vs Toronto Maple Leafs</a></td>
+            <td>December 16, 2025 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-17 16:00:00" data-start="2025-12-16 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-3">Philadelphia Flyers vs Montreal Canadiens</a></td>
+            <td>December 16, 2025 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-17 16:00:00" data-start="2025-12-16 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-4">New York Islanders vs Detroit Red Wings</a></td>
+            <td>December 16, 2025 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-17 16:00:00" data-start="2025-12-16 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-5">Vancouver Canucks vs New York Rangers</a></td>
+            <td>December 16, 2025 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-17 16:00:00" data-start="2025-12-16 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-6">Anaheim Ducks vs Columbus Blue Jackets</a></td>
+            <td>December 16, 2025 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-17 16:00:00" data-start="2025-12-16 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-7">Edmonton Oilers vs Pittsburgh Penguins</a></td>
+            <td>December 16, 2025 04:30 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-17 16:30:00" data-start="2025-12-16 16:30:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-8">Washington Capitals vs Minnesota Wild</a></td>
+            <td>December 16, 2025 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-17 17:00:00" data-start="2025-12-16 17:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-9">Calgary Flames vs San Jose Sharks</a></td>
+            <td>December 16, 2025 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-17 19:00:00" data-start="2025-12-16 19:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-10">Colorado Avalanche vs Seattle Kraken</a></td>
+            <td>December 16, 2025 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-17 19:00:00" data-start="2025-12-16 19:00:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
