--- a/soccer.html
+++ b/soccer.html
@@ -96,19 +96,19 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Roma vs Como</a>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Eldense vs Real Sociedad</a>
 <td>December 15, 2025 11:45 AM</td>
 <td><span class="countdown-timer" data-end="December 16, 2025 10:45:00" data-start="December 15, 2025 11:45:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Rayo Vallecano vs Real Betis</a>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Sporting Gijón vs Valencia</a>
 <td>December 15, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="December 16, 2025 11:00:00" data-start="December 15, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Manchester United vs Bournemouth</a>
+<td><a href="https://roxiestreams.live/soccer-streams-3">CD Guadalajara vs Barcelona</a>
 <td>December 15, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="December 16, 2025 11:00:00" data-start="December 15, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Sheffield Wednesday vs Derby County</a>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Cardiff City vs Chelsea</a>
 <td>December 15, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="December 16, 2025 05:00:00" data-start="December 15, 2025 12:00:00"></span></td>
 <tr>
