--- a/soccer.html
+++ b/soccer.html
@@ -96,23 +96,19 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Eldense vs Real Sociedad</a>
-<td>December 15, 2025 11:45 AM</td>
-<td><span class="countdown-timer" data-end="December 16, 2025 10:45:00" data-start="December 15, 2025 11:45:00"></span></td>
-<tr>
 <td><a href="https://roxiestreams.live/soccer-streams-2">Sporting Gijón vs Valencia</a>
-<td>December 15, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 16, 2025 11:00:00" data-start="December 15, 2025 12:00:00"></span></td>
+<td>December 16, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 17, 2025 11:00:00" data-start="December 16, 2025 12:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-3">CD Guadalajara vs Barcelona</a>
-<td>December 15, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 16, 2025 11:00:00" data-start="December 15, 2025 12:00:00"></span></td>
+<td>December 16, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 17, 2025 11:00:00" data-start="December 16, 2025 12:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-4">Cardiff City vs Chelsea</a>
-<td>December 15, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 16, 2025 05:00:00" data-start="December 15, 2025 12:00:00"></span></td>
+<td>December 16, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 17, 2025 11:00:00" data-start="December 16, 2025 12:00:00"></span></td>
 <tr>
-</tr></td></tr></td></tr></td></tr></td></tr></tbody></table></div>
+</tr></td></tr></td></tr></td></tr></tbody></table></div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
 <li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
