--- a/index.html
+++ b/index.html
@@ -183,29 +183,29 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><a href="https://roxiestreams.live/soccer-streams-2">Laliga</a></td>
-                    <td>December 15, 2025 05:00 AM</td>
-                    <td><span class="countdown-timer" data-start="December 15, 2025 12:00:00" data-end="December 30, 2025 23:30:00"></span></td>
-                </tr>
-                <tr>
-                    <td><a href="https://roxiestreams.live/soccer-streams-3">Premier League</a></td>
-                    <td>December 15, 2025 06:00 AM</td>
-                    <td><span class="countdown-timer" data-start="December 15, 2025 12:00:00" data-end="December 30, 2025 23:30:00"></span></td>
-                </tr>
-                <tr>
                     <td><a href="https://roxiestreams.live/darts">World Darts Championship</a></td>
-                    <td>December 15, 2025 10:00 AM</td>
-                    <td><span class="countdown-timer" data-start="December 15, 2025 10:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td>December 16, 2025 10:00 AM</td>
+                    <td><span class="countdown-timer" data-start="December 16, 2025 10:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/wwe-streams">WWE RAW</a></td>
-                    <td>December 15, 2025 17:00 PM</td>
-                    <td><span class="countdown-timer" data-start="December 15, 2025 17:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/soccer-streams-3">Copa Del Rey</a></td>
+                    <td>December 16, 2025 12:00 PM</td>
+                    <td><span class="countdown-timer" data-start="December 16, 2025 12:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/nfl-streams-1">NFL (MNF)</a></td>
-                    <td>December 15, 2025 17:15 PM</td>
-                    <td><span class="countdown-timer" data-start="December 15, 2025 17:15:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/soccer-streams-4">Carabao Cup</a></td>
+                    <td>December 16, 2025 12:00 PM</td>
+                    <td><span class="countdown-timer" data-start="December 16, 2025 12:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                </tr>
+                <tr>
+                    <td><a href="https://roxiestreams.live/wwe-streams">WWE NXT</a></td>
+                    <td>December 16, 2025 17:00 PM</td>
+                    <td><span class="countdown-timer" data-start="December 16, 2025 17:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                </tr>
+                <tr>
+                    <td><a href="https://roxiestreams.live/nba-streams-1">NBA Cup</a></td>
+                    <td>December 16, 2025 17:30 PM</td>
+                    <td><span class="countdown-timer" data-start="December 16, 2025 17:30:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
             </tbody>
