--- a/nhl-streams-4.html
+++ b/nhl-streams-4.html
@@ -134,7 +134,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://600.alfirdaus.eu.org/nhl4.m3u8');
+            showPlayer('clappr', 'https://602.shadow-ran.online/nhl4.m3u8');
         };
     </script>
     <script>
