--- a/nhl.html
+++ b/nhl.html
@@ -144,6 +144,34 @@
             <td><a href="https://roxiestreams.live/nhl-streams-10">Colorado Avalanche vs Seattle Kraken</a></td>
             <td>December 16, 2025 07:00 PM</td>
             <td><span class="countdown-timer" data-end="2025-12-17 19:00:00" data-start="2025-12-16 19:00:00"></span></td>
+        </tr>
+        <tr style="background-color: #333; color: white;">
+            <td colspan="3"><strong>Wednesday, December 17, 2025</strong></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-1">Los Angeles Kings vs Florida Panthers</a></td>
+            <td>December 17, 2025 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-18 16:00:00" data-start="2025-12-17 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-2">Utah Mammoth vs Detroit Red Wings</a></td>
+            <td>December 17, 2025 04:30 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-18 16:30:00" data-start="2025-12-17 16:30:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-3">Winnipeg Jets vs St. Louis Blues</a></td>
+            <td>December 17, 2025 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-18 17:00:00" data-start="2025-12-17 17:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-4">Carolina Hurricanes vs Nashville Predators</a></td>
+            <td>December 17, 2025 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-18 17:00:00" data-start="2025-12-17 17:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-5">New Jersey Devils vs Vegas Golden Knights</a></td>
+            <td>December 17, 2025 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-12-18 19:00:00" data-start="2025-12-17 19:00:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
