--- a/soccer.html
+++ b/soccer.html
@@ -96,15 +96,35 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Sporting Gijón vs Valencia</a>
+<td><a href="https://roxiestreams.live/soccer-streams-1">PSG vs Flamengo</a>
 <td>December 16, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="December 17, 2025 11:00:00" data-start="December 16, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">CD Guadalajara vs Barcelona</a>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Manchester City vs Brentford</a>
 <td>December 16, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="December 17, 2025 11:00:00" data-start="December 16, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Cardiff City vs Chelsea</a>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Atlético Baleares vs Atlético Madrid</a>
+<td>December 16, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 17, 2025 11:00:00" data-start="December 16, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Talavera CF vs Real Madrid</a>
+<td>December 16, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 17, 2025 11:00:00" data-start="December 16, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Deportivo Alavés vs Sevilla</a>
+<td>December 16, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 17, 2025 11:00:00" data-start="December 16, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-6">Newcastle United vs Fulham</a>
+<td>December 16, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 17, 2025 11:00:00" data-start="December 16, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Farense vs Benfica</a>
+<td>December 16, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 17, 2025 11:00:00" data-start="December 16, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-8">Corinthians vs Vasco Gama</a>
 <td>December 16, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="December 17, 2025 11:00:00" data-start="December 16, 2025 12:00:00"></span></td>
 <tr>
