--- a/nfl.html
+++ b/nfl.html
@@ -143,14 +143,56 @@
       <tr>
        <td>
         <a href="https://roxiestreams.live/ncaa-streams-1">
-         Troy vs Jacksonville State
+         Old Dominion vs South Florida
         </a>
        </td>
        <td>
-        December 16, 2025 5:15 PM
+        December 16, 2025 2:00 PM
        </td>
        <td>
         <span class="countdown-timer" data-end="December 17, 2025 5:15 PM:00" data-start="December 16, 2025 5:15 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/ncaa-streams-1">
+         Old Dominion vs South Florida
+        </a>
+       </td>
+       <td>
+        December 17, 2025 2:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 18, 2025 5:15 PM:00" data-start="December 17, 2025 2:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/ncaa-streams-2">
+         Hutchinson v Iowa Western
+        </a>
+       </td>
+       <td>
+        December 17, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 18, 2025 5:15 PM:00" data-start="December 17, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/ncaa-streams-3">
+         Louisiana v Delaware
+        </a>
+       </td>
+       <td>
+        December 17, 2025 5:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 18, 2025 5:15 PM:00" data-start="December 17, 2025 5:30 PM:00">
         </span>
        </td>
       </tr>
