--- a/index.html
+++ b/index.html
@@ -183,29 +183,29 @@
             </thead>
             <tbody>
                 <tr>
+                    <td><a href="https://roxiestreams.live/soccer-streams-1">FIFA Intercontiental Cup</a></td>
+                    <td>December 17, 2025 09:00 AM</td>
+                    <td><span class="countdown-timer" data-start="December 17, 2025 09:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                </tr>
+                <tr>
+                    <td><a href="https://roxiestreams.live/soccer">Copa Del Rey</a></td>
+                    <td>December 17, 2025 10:00 AM</td>
+                    <td><span class="countdown-timer" data-start="December 17, 2025 10:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                </tr>
+                <tr>
                     <td><a href="https://roxiestreams.live/darts">World Darts Championship</a></td>
-                    <td>December 16, 2025 10:00 AM</td>
-                    <td><span class="countdown-timer" data-start="December 16, 2025 10:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td>December 17, 2025 11:00 AM</td>
+                    <td><span class="countdown-timer" data-start="December 17, 2025 11:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/soccer-streams-3">Copa Del Rey</a></td>
-                    <td>December 16, 2025 12:00 PM</td>
-                    <td><span class="countdown-timer" data-start="December 16, 2025 12:00:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/soccer">Carabao Cup</a></td>
+                    <td>December 17, 2025 11:30 AM</td>
+                    <td><span class="countdown-timer" data-start="December 17, 2025 11:30:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/soccer-streams-4">Carabao Cup</a></td>
-                    <td>December 16, 2025 12:00 PM</td>
-                    <td><span class="countdown-timer" data-start="December 16, 2025 12:00:00" data-end="December 30, 2025 23:30:00"></span></td>
-                </tr>
-                <tr>
-                    <td><a href="https://roxiestreams.live/wwe-streams">WWE NXT</a></td>
-                    <td>December 16, 2025 17:00 PM</td>
-                    <td><span class="countdown-timer" data-start="December 16, 2025 17:00:00" data-end="December 30, 2025 23:30:00"></span></td>
-                </tr>
-                <tr>
-                    <td><a href="https://roxiestreams.live/nba-streams-1">NBA Cup</a></td>
-                    <td>December 16, 2025 17:30 PM</td>
-                    <td><span class="countdown-timer" data-start="December 16, 2025 17:30:00" data-end="December 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/aew">AEW</a></td>
+                    <td>December 17, 2025 17:00 PM</td>
+                    <td><span class="countdown-timer" data-start="December 17, 2025 17:00:00" data-end="December 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
             </tbody>
