--- a/soccer.html
+++ b/soccer.html
@@ -116,6 +116,10 @@
 <td>December 17, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="December 18, 2025 11:00:00" data-start="December 17, 2025 12:00:00"></span></td>
 <tr>
+<td><a href="https://roxiestreams.live/soccer-streams-9">Celtic vs Dundee United</a>
+<td>December 17, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 18, 2025 11:00:00" data-start="December 17, 2025 12:00:00"></span></td>
+<tr>
 <td><a href="https://roxiestreams.live/soccer-streams-6">Newcastle United vs Fulham</a>
 <td>December 17, 2025 12:15 PM</td>
 <td><span class="countdown-timer" data-end="December 18, 2025 11:15:00" data-start="December 17, 2025 12:15:00"></span></td>
