--- a/nba.html
+++ b/nba.html
@@ -170,6 +170,194 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for December 18, 2025
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Atlanta Hawks vs Charlotte Hornets
+        </a>
+       </td>
+       <td>
+        December 18, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 19, 2025 4:00 PM:00" data-start="December 18, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         New York Knicks vs Indiana Pacers
+        </a>
+       </td>
+       <td>
+        December 18, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 19, 2025 4:00 PM:00" data-start="December 18, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Miami Heat vs Brooklyn Nets
+        </a>
+       </td>
+       <td>
+        December 18, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 19, 2025 4:30 PM:00" data-start="December 18, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Los Angeles Clippers vs Oklahoma City Thunder
+        </a>
+       </td>
+       <td>
+        December 18, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 19, 2025 5:00 PM:00" data-start="December 18, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Washington Wizards vs San Antonio Spurs
+        </a>
+       </td>
+       <td>
+        December 18, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 19, 2025 5:00 PM:00" data-start="December 18, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         Toronto Raptors vs Milwaukee Bucks
+        </a>
+       </td>
+       <td>
+        December 18, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 19, 2025 5:00 PM:00" data-start="December 18, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-7">
+         Houston Rockets vs New Orleans Pelicans
+        </a>
+       </td>
+       <td>
+        December 18, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 19, 2025 5:00 PM:00" data-start="December 18, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-8">
+         Detroit Pistons vs Dallas Mavericks
+        </a>
+       </td>
+       <td>
+        December 18, 2025 5:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 19, 2025 5:30 PM:00" data-start="December 18, 2025 5:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-9">
+         Orlando Magic vs Denver Nuggets
+        </a>
+       </td>
+       <td>
+        December 18, 2025 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 19, 2025 6:00 PM:00" data-start="December 18, 2025 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-10">
+         Golden State Warriors vs Phoenix Suns
+        </a>
+       </td>
+       <td>
+        December 18, 2025 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 19, 2025 6:00 PM:00" data-start="December 18, 2025 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-11">
+         Los Angeles Lakers vs Utah Jazz
+        </a>
+       </td>
+       <td>
+        December 18, 2025 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 19, 2025 6:00 PM:00" data-start="December 18, 2025 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-12">
+         Sacramento Kings vs Portland Trail Blazers
+        </a>
+       </td>
+       <td>
+        December 18, 2025 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 19, 2025 7:00 PM:00" data-start="December 18, 2025 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
