--- a/fighting.html
+++ b/fighting.html
@@ -102,7 +102,7 @@
 <td>December 16, 2025 10:00 PM</td>
 <td><span class="countdown-timer" data-end="December 31, 2025 23:59:00" data-start="December 16, 2025 10:00:00"></span></td>
 </tr>
-<td><a href="https://roxiestreams.live/wwe-streams">AEW</a></td>
+<td><a href="https://roxiestreams.live/aew">AEW</a></td>
 <td>December 17, 2025 17:00 PM</td>
 <td><span class="countdown-timer" data-end="December 31, 2025 23:59:00" data-start="December 17, 2025 17:00:00"></span></td>
 </tr>
