--- a/nfl.html
+++ b/nfl.html
@@ -142,8 +142,8 @@
      <tbody>
       <tr>
        <td>
-        <a href="https://roxiestreams.live/ncaa-streams-1">
-         Old Dominion vs South Florida
+        <a href="https://roxiestreams.live/nfl-streams-1">
+         Los Angeles Rams vs Seattle Seahawks
         </a>
        </td>
        <td>
