--- a/soccer.html
+++ b/soccer.html
@@ -96,43 +96,35 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">PSG vs Flamengo</a>
-<td>December 17, 2025 09:00 AM</td>
-<td><span class="countdown-timer" data-end="December 18, 2025 08:00:00" data-start="December 17, 2025 09:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Atlético Baleares vs Atlético Madrid</a>
+<td>December 18, 2025 10:00 AM</td>
+<td><span class="countdown-timer" data-end="December 19, 2025 09:00:00" data-start="December 18, 2025 10:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Atlético Baleares vs Atlético Madrid</a>
-<td>December 17, 2025 10:00 AM</td>
-<td><span class="countdown-timer" data-end="December 18, 2025 09:00:00" data-start="December 17, 2025 10:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Napoli vs Milan</a>
+<td>December 18, 2025 11:00 AM</td>
+<td><span class="countdown-timer" data-end="December 19, 2025 10:00:00" data-start="December 18, 2025 11:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Manchester City vs Brentford</a>
-<td>December 17, 2025 11:30 AM</td>
-<td><span class="countdown-timer" data-end="December 18, 2025 10:30:00" data-start="December 17, 2025 11:30:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Crystal Palace vs KuPS</a>
+<td>December 18, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 19, 2025 11:00:00" data-start="December 18, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Talavera CF vs Real Madrid</a>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Strasbourg vs Breidablik</a>
+<td>December 18, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 19, 2025 11:00:00" data-start="December 18, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Real Murcia vs Real Betis</a>
+<td>December 18, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 19, 2025 11:00:00" data-start="December 18, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-6">Rayo Vallecano vs Drita</a>
+<td>December 18, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="December 19, 2025 11:00:00" data-start="December 18, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Mainz 05 vs Samsunspor</a>
 <td>December 17, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="December 18, 2025 11:00:00" data-start="December 17, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Deportivo Alavés vs Sevilla</a>
-<td>December 17, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 18, 2025 11:00:00" data-start="December 17, 2025 12:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-9">Celtic vs Dundee United</a>
-<td>December 17, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 18, 2025 11:00:00" data-start="December 17, 2025 12:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">Newcastle United vs Fulham</a>
-<td>December 17, 2025 12:15 PM</td>
-<td><span class="countdown-timer" data-end="December 18, 2025 11:15:00" data-start="December 17, 2025 12:15:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-7">Farense vs Benfica</a>
-<td>December 17, 2025 12:45 PM</td>
-<td><span class="countdown-timer" data-end="December 18, 2025 11:45:00" data-start="December 17, 2025 12:45:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-8">Corinthians vs Vasco Gama</a>
-<td>December 17, 2025 13:00 PM</td>
-<td><span class="countdown-timer" data-end="December 18, 2025 12:00:00" data-start="December 17, 2025 13:00:00"></span></td>
-<tr>
-</tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table></div>
+</tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table></div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
 <li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
